<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gred"
    tools:context=".BookAppointmentActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/theme_purple"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/title_header"
            layout="@layout/actionbar_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_name"
                style="@style/editTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                app:errorTextAppearance="@style/error_appearance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <EditText
                    android:id="@+id/edt_name"
                    style="@style/editTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="@dimen/margin_24dp"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:layout_marginRight="@dimen/margin_24dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/name"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_number"
                style="@style/editTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                app:errorTextAppearance="@style/error_appearance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_layout_name">

                <EditText
                    android:id="@+id/edt_number"
                    style="@style/editTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="@dimen/margin_24dp"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:layout_marginRight="@dimen/margin_24dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/mobile_no"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_14sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <EditText
                android:id="@+id/edt_additional_info"
                style="@style/editTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_marginRight="@dimen/margin_24dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/additional_info"
                android:maxLines="5"
                android:minLines="4"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_layout_number" />

            <LinearLayout
                android:id="@+id/package_types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_additional_info">

                <LinearLayout
                    android:id="@+id/ll_pkg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <include
                        android:id="@+id/cb_hair_cut"
                        layout="@layout/package_grid" />

                    <include
                        android:id="@+id/cb_spa"
                        layout="@layout/package_grid" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <include
                        android:id="@+id/cb_hair_color"
                        layout="@layout/package_grid" />

                    <include
                        android:id="@+id/cb_make_up"
                        layout="@layout/package_grid" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <include
                        android:id="@+id/cb_facial"
                        layout="@layout/package_grid" />

                    <include
                        android:id="@+id/cb_bridal"
                        layout="@layout/package_grid" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txt_book_appointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_marginBottom="@dimen/padding_12dp"
                android:text="@string/book_appointment_here"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/img_picker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/package_types" />

            <ImageView
                android:id="@+id/img_picker"
                android:layout_width="@dimen/height_80"
                android:layout_height="@dimen/height_70dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_8dp"
                android:padding="5dp"
                android:src="@drawable/ic_calender"
                app:layout_constraintBottom_toTopOf="@+id/ll_appointment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_book_appointment" />

            <!-- <FrameLayout
                 android:id="@+id/fl_carousal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 />-->

            <LinearLayout
                android:id="@+id/ll_appointment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/upper_curved_white_bg"
                android:orientation="vertical"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/txt_title_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_18dp"
                    android:layout_marginBottom="@dimen/margin_10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/book_appointment"
                    android:textColor="@color/theme_purple"
                    android:textSize="@dimen/text_size_25sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_1dp"
                    android:layout_marginLeft="@dimen/height_25"
                    android:layout_marginRight="@dimen/height_25"
                    android:background="@color/theme_purple" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/margin_10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_time"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="end|center_vertical"
                        android:textColor="@color/theme_purple"
                        android:textSize="@dimen/text_size_25sp" />

                    <TextView
                        android:id="@+id/txt_day_date"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center_vertical|center"
                        android:textColor="@color/theme_purple"
                        android:textSize="@dimen/text_size_18sp" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_book_appointment"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_50dp"
                    android:layout_margin="@dimen/dimen_8dp"
                    android:background="@color/theme_purple"
                    android:elevation="@dimen/dimen_5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/book"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_18sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>